--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@
     min-height:400px;
 }
 
+.row-content-head {
+    margin:0px auto;
+    padding: 50px 0px 50px 0px;
+    border-bottom: 1px ridge;
+    
+}
+
 .footer{
     background-color: #D1C4E9;
     margin:0px auto;
@@ -28,3 +35,13 @@ address{
     margin:0px;
     color:#0f0f0f;
 }
+
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-dark {
+     background-color: #512DA8;
+}
+
