--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,13 @@ body{
      background-color: #512DA8;
 }
 
+.bg-reserve {
+    background-color: #FDC02F;
+}
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
