--- a/css/styles.css
+++ b/css/styles.css
@@ -70,3 +70,16 @@ body{
     left: 0;
     min-height: 300px;
 }
+
+.carousel-caption {
+    top: 50%;
+    transform: translateY(-50%);
+    bottom: initial;
+}
+
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
